packages/webassemblyjs/test/fixtures/type-errors/br-1/module.wast
(module (func $type-arg-empty-vs-num (result i32)
	(block (result i32) (br 0) (i32.const 1))
))
